--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
-		"oasis-engine": "^0.5"
+		"oasis-engine": "^0.5",
+		"@oasis-engine/controls": "^0.5"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.0",
